@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST oauth2-0.0.13.gem 11776 RMD160 d1fbdf77275f94bce13ef831a1f840fb6e960b81 SHA1 f065a371905e852d3b4cbd3689e44ddef11fa8dc SHA256 b23b5a72dd6fe58632f000f9b49fcbddfe049aabf3e6dc7d96213c58dc639d5b
+DIST oauth2-0.4.1.gem 12800 RMD160 0bddd4f766457eeca336c8705fa9c648773089dd SHA1 6ab10685a84d94f1bd817facc408efd98a3831c8 SHA256 a68435b304f0aa5abea145d2060e0b5bee8b581be6a958bc15c688c5a6e2132e
 EBUILD oauth2-0.0.13.ebuild 754 RMD160 847c39a515b33a6ab1fcbd352ba6f2c2c352750c SHA1 34a813187ae33c61aef4b395f273079f63547170 SHA256 5f1c35f5cb29a40e8220fe1b91678048a6bdfab6a00180a0ed87365493ce5fc2
-MISC ChangeLog 1512 RMD160 74ffb99ffc53c0ef183abb06d4ad3be16922373f SHA1 af1c92bb02a5bb648eac198a480bf3f59759759f SHA256 1140b263292056fef254d6634858138a594fd9a87da78bd0c326ff6dba069160
+EBUILD oauth2-0.4.1.ebuild 930 RMD160 4847df269fb6ca959e9499d211612d211a2a254f SHA1 d3a73973334b0a66a53ef6bbd9d7a54a3f46c587 SHA256 4373139d17a8bca74d63f6d5bf0ab6ca049dbbbe4cc7019386953912585d9342
+MISC ChangeLog 1660 RMD160 de4396756809236cff4bde1e334fa1937ea5f83e SHA1 59ea70f76ca68436015f10f4a1626dc2b63af882 SHA256 505adf90424392c3b3acf0a2312ef96241e2fdbd963ec6f173b4a565067597b7
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk0ggWgACgkQrnu0mw69JkrcJgD/UcWXRWX1kJA5OqYPTtazre+5
-YgtqkGqpuf3QGzARBE0A/2czOEB0D23HIAsNpykCmjVsSLsTxs6bZP/Gk+YTvzNT
-=4C6O
+iF4EAREIAAYFAk4lMYoACgkQiIP6VqMIqNfWtgD/VvERCAoVTAWEahlfE0VMNixZ
+zQI+41qv6CW3VbZYZY8A/24NRPEqI3ndCICsaoW6lmKdH6mJ7j6hzzlvHVRU48W4
+=lFXs
 -----END PGP SIGNATURE-----
